--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@react-native-community/hooks": "^2.6.0",
     "expo": "~37.0.3",
+    "expo-constants": "^9.1.1",
     "logkitty": "^0.7.1",
     "mem": "^6.1.0",
     "react": "~16.9.0",
